--- a/head/packages.tex
+++ b/head/packages.tex
@@ -13,7 +13,7 @@
 \usepackage{charter} % Use the Charter font
 \usepackage[utf8]{inputenc} % Use UTF-8 encoding
 \usepackage{microtype} % Slightly tweak font spacing for aesthetics
-\usepackage[english]{babel} % Language hyphenation and typographical rules
+\usepackage[english, ngerman]{babel} % Language hyphenation and typographical rules
 \usepackage{amsthm, amsmath, amssymb} % Mathematical typesetting
 \usepackage{float} % Improved interface for floating objects
 \usepackage[final, colorlinks = true, 
