--- a/head/packages.tex
+++ b/head/packages.tex
@@ -13,7 +13,8 @@
 \usepackage{charter} % Use the Charter font
 \usepackage[utf8]{inputenc} % Use UTF-8 encoding
 \usepackage{microtype} % Slightly tweak font spacing for aesthetics
-\usepackage[english, ngerman]{babel} % Language hyphenation and typographical rules
+%\usepackage[english, ngerman]{babel} % Language hyphenation and typographical rules
+\usepackage[english]{babel}
 \usepackage{amsthm, amsmath, amssymb} % Mathematical typesetting
 \usepackage{float} % Improved interface for floating objects
 \usepackage[final, colorlinks = true, 
@@ -25,7 +26,7 @@
 \usepackage{rotating} % Rotation tools
 \usepackage{censor} % Facilities for controlling restricted text
 \usepackage{listings, head/style/lstlisting} % Environment for non-formatted code, !uses style file!
-\usepackage{pseudocode} % Environment for specifying algorithms in a natural way
+%\usepackage{pseudocode} % Environment for specifying algorithms in a natural way
 \usepackage{head/style/avm} % Environment for f-structures, !uses style file!
 \usepackage{booktabs} % Enhances quality of tables
 \usepackage{tikz-qtree} % Easy tree drawing tool
