--- a/head/packages.tex
+++ b/head/packages.tex
@@ -33,8 +33,8 @@
 \tikzset{every tree node/.style={align=center,anchor=north},
          level distance=2cm} % Configuration for q-trees
 \usepackage{head/style/btree} % Configuration for b-trees and b+-trees, !uses style file!
-\usepackage[backend=biber,style=numeric,
-            sorting=nyt]{biblatex} % Complete reimplementation of bibliographic facilities
+%\usepackage[backend=biber,style=numeric,
+            %sorting=nyt]{biblatex} % Complete reimplementation of bibliographic facilities
 \addbibresource{ecl.bib}
 \usepackage{csquotes} % Context sensitive quotation facilities
 \usepackage[ddmmyyyy]{datetime} % Uses YEAR-MONTH-DAY format for dates
