--- a/head/packages.tex
+++ b/head/packages.tex
@@ -13,8 +13,7 @@
 \usepackage{charter} % Use the Charter font
 \usepackage[utf8]{inputenc} % Use UTF-8 encoding
 \usepackage{microtype} % Slightly tweak font spacing for aesthetics
-%\usepackage[english, ngerman]{babel} % Language hyphenation and typographical rules
-\usepackage[english]{babel}
+\usepackage[english, ngerman]{babel} % Language hyphenation and typographical rules
 \usepackage{amsthm, amsmath, amssymb} % Mathematical typesetting
 \usepackage{float} % Improved interface for floating objects
 \usepackage[final, colorlinks = true, 
@@ -26,15 +25,15 @@
 \usepackage{rotating} % Rotation tools
 \usepackage{censor} % Facilities for controlling restricted text
 \usepackage{listings, head/style/lstlisting} % Environment for non-formatted code, !uses style file!
-%\usepackage{pseudocode} % Environment for specifying algorithms in a natural way
+\usepackage{pseudocode} % Environment for specifying algorithms in a natural way
 \usepackage{head/style/avm} % Environment for f-structures, !uses style file!
 \usepackage{booktabs} % Enhances quality of tables
 \usepackage{tikz-qtree} % Easy tree drawing tool
 \tikzset{every tree node/.style={align=center,anchor=north},
          level distance=2cm} % Configuration for q-trees
 \usepackage{head/style/btree} % Configuration for b-trees and b+-trees, !uses style file!
-%\usepackage[backend=biber,style=numeric,
-            %sorting=nyt]{biblatex} % Complete reimplementation of bibliographic facilities
+\usepackage[backend=biber,style=numeric,
+            sorting=nyt]{biblatex} % Complete reimplementation of bibliographic facilities
 \addbibresource{ecl.bib}
 \usepackage{csquotes} % Context sensitive quotation facilities
 \usepackage[ddmmyyyy]{datetime} % Uses YEAR-MONTH-DAY format for dates
